--- a/index.jade
+++ b/index.jade
@@ -8,6 +8,6 @@ html(lang="en")
 
 
 		.form-group
-			button(type="button") Schedule
+			button(type="button" href="#") Schedule
 			button(type="button") Routes
 			button(type="button") Events
